--- a/README.org
+++ b/README.org
@@ -8,6 +8,8 @@
 ** Installation
 For using this project you need:
 #+begin_src emacs-lisp
+git clone https://github.com/YushchenkoAndrew/Scanner.git
+cd Scanner
 npm install http-server -g 
 pip install websocket-server
 pip install python-sane
@@ -17,7 +19,7 @@ pip install python-sane
 ** Changing
 Change HOST value in file app.js to your local ip address:
 #+begin_src emacs-lisp
-cd Scanner/Front-End
+cd Front-End
 vi app.js
 #+end_src
 
